# joe-editor

./: .editorconfig  .hgignore  COPYING  ChangeLog  INSTALL  INSTALL.AMIGA  Makefile.am  NEWS  NEWS.md  README  README.md  acinclude.m4  autojoe  configure.ac  cygbuild  runtests  setup.hint  xterm-patch  xterm-readme
charmaps/: klingon.in
docs/: HACKING  HINTS  LIST  hacking.md  help-system.html  history.md  list.md  man.md  options.md  tasks.md  windows.md
htdocs/: Makefile  changelog-src.html  footer-src.html  header-src.html  hints-src.html  html.c  index-src.html  news-src.html
joe/: Makefile.am  TODO  TODO.coro  b.c  b.h  blocks.c  blocks.h  builtin.c  builtin.h  builtins.c  bw.c  bw.h  charmap.c  charmap.h  cmap.c  cmap.h  cmd.c  cmd.h  config.h  coroutine.c  coroutine.h  dir.c  gettext.c  gettext.h  hash.c  hash.h  help.c  help.h  i18n.c  i18n.h  kbd.c  kbd.h  lattr.c  lattr.h  libcoro.c  libcoro.h  logbuf.c  macro.c  macro.h  main.c  (+84 more)
joe/data/: cmap.c  cmap.h  uni.txt  uniproc.c
man/: Makefile.am  joe.1.in
man/ru/: Makefile.am  joe.1.in
po/: HOWTO  Makefile.am  de.po  fr.po  hu.po  joe.pot  ru.po  uk.po
rc/: Makefile.am  ftyperc  jicerc.ru.in  jmacsrc.in  joerc.in  jpicorc.in  jstarrc.in  rjoerc.in  shell.csh  shell.sh
syntax/: Makefile.am  c.jsf.in  filename.jsf.in  go.jsf.in  html.jsf.in  ini.jsf.in  java.jsf.in  javascript.jsf.in  json.jsf.in  mail.jsf.in  pascal.jsf.in  python.jsf.in  sh.jsf.in  typescript.jsf.in  xml.jsf.in
tests/: alltests.py
tests/joefx/: __init__.py  controller.py  exceptions.py  fixtures.py  keys.py  testbase.py
windows/: .editorconfig  building.txt
windows/docs/: backlog.txt  license.txt  todo.txt
windows/rc/: ftyperc  jicerc  jmacsrc  joerc  jpicorc  jstarrc  vt.bat
windows/schemes/: putty-black.joecolor  putty-white.joecolor  solarized-light.joecolor  solarized.joecolor  xterm.joecolor
windows/src/: .editorconfig  joewin.sln
windows/src/common/: bentries.c  builtin.c  colors.c  comm.c  globals.c  joewincommon.vcxproj  joewincommon.vcxproj.filters  jwbentries.h  jwbuiltin.h  jwcolors.h  jwcomm.h  jwglobals.h  jwres.h  jwutils.h  jwwin.h  lzf.h  lzfP.h  lzf_d.c  resources.rc  startup.c  tinfl.c  utils.c  wcwidth.c
windows/src/configuration/: configuration.targets  configuration.vcxproj  configuration.vcxproj.filters  markdown.css  mdtohtml.py  squeezecolors.py  squeezejsf.py  squeezepo.py  squeezerc.py
windows/src/exe/: frontend.targets  jice-builtins.spec  jice.vcxproj  jmacs-builtins.spec  jmacs.vcxproj  joe-builtins.spec  joe.vcxproj  joewin.mft  joewin.rc  jpico-builtins.spec  jpico.vcxproj  jstar-builtins.spec  jstar.vcxproj  main.c
windows/src/exe/joedll/: joedll-builtins.spec  joedll.c  joedll.h  joedll.vcxproj
windows/src/exe/standalone/: colors.spec  jice-builtins.spec  jice.vcxproj  jmacs-builtins.spec  jmacs.vcxproj  joe-builtins.spec  joe.vcxproj  jpico-builtins.spec  jpico.vcxproj  jstar-builtins.spec  jstar.vcxproj  main.c  standalone.targets  syntaxes.spec
windows/src/installer/: .editorconfig  Product.wxs  binaries.wxs  colors.wxs  docs.wxs  installer.wixproj  properties.wxi  rcfiles.wxs  syntaxes.wxs  vt.wxs
windows/src/joe/: joe.vcxproj  joe.vcxproj.filters
windows/src/joe/win/: autoconf.h  builtin.c  builtin.h  bupdates.c  bupdates.h  env.c  fs.c  i18n.c  joedata.c  joedata.h  jwglue.h  subproc.c  subproc.h  tty.c  uwindows.c  uwindows.h
windows/src/joe/win/libco/: amd64.c  choose.h  fiber.c  libco.h  x86.c
windows/src/putty/: putty.vcxproj  putty.vcxproj.filters
windows/src/putty/putty/: ldiscucs.c  minibidi.c  nogss.c  putty.h  settings.c  terminal.c  terminal.h
windows/src/putty/putty/windows/: winctrls.c  window.c  winstuff.h
windows/src/putty/win/: be_joewin_s.c  config.c  joebackend.c  jwconfig.h  jwui.h  jwuserfuncs.h  stubs.c  ui.c  userfuncs.c
windows/src/winpty/: .editorconfig  main.cc  winclient.cc  winpty.vcxproj
windows/src/winpty/include/: Agent.h  AgentMsg.h  DebugClient.h  Terminal.h  Win32Console.h  winpty.h
windows/src/winpty/src/: Agent.cc  AgentAssert.cc  ConsoleInput.cc  DebugClient.cc  EventLoop.cc  NamedPipe.cc  Terminal.cc  Win32Console.cc  winpty.cc
windows/tools/liblzf-3.6/: config.h  crc32.h  getopt.c  getopt.h  getopt1.c  getopt_int.h  lzf.c  lzf.h  lzf.sln  lzf.vcxproj  lzf.vcxproj.filters  lzfP.h  lzf_c.c  lzf_d.c
windows/tools/sync/: enlistexternals.bat  exportfiles.bat  importfiles.bat  mergerc.bat  revertexternals.bat  syncexternals.bat
windows/tools/sync/map/: joe.files  joe.version  putty.files  putty.version
