data_joedir = $(datadir)/joe

data_syntaxdir = $(data_joedir)/syntax

data_syntax_DATA = c.jsf perl.jsf verilog.jsf conf.jsf python.jsf php.jsf sh.jsf \
	mail.jsf pascal.jsf html.jsf vhdl.jsf fortran.jsf java.jsf xml.jsf tcl.jsf \
	lisp.jsf csh.jsf mason.jsf diff.jsf asm.jsf tex.jsf css.jsf ocaml.jsf \
	4gl.jsf sml.jsf sql.jsf awk.jsf cobol.jsf sed.jsf ps.jsf ada.jsf \
	troff.jsf haskell.jsf rexx.jsf skill.jsf lua.jsf ruby.jsf m4.jsf joerc.jsf \
	spec.jsf matlab.jsf jsf.jsf jsf_check.jsf csharp.jsf batch.jsf ini.jsf go.jsf \
	js.jsf json.jsf typescript.jsf ant.jsf comment_todo.jsf debian.jsf elixir.jsf \
	erb.jsf git-commit.jsf haml.jsf htmlerb.jsf iptables.jsf md.jsf prolog.jsf \
	properties.jsf sieve.jsf whitespace.jsf yaml.jsf erlang.jsf powershell.jsf \
	puppet.jsf filename.jsf

EXTRA_DIST = $(data_syntax_DATA)
